# Rice-Plant-Disease-Classification-

./: .gitignore  README.md  alex_rgb.ipynb  best_model.h5  continue_train.py  data_preprocessing.py  eda.ipynb  flake.nix  main.typ  oversampling_generator.ipynb  predict.py  prediction_template.csv  pyproject.toml  references.bib  resnet_incept_rgb.ipynb  resnet_rgb.ipynb  rice_classifier.py  spectral_separate.py  task2_4_colors.ipynb  task2_4colors.ipynb  task2_blue.ipynb  task2_green.ipynb  task2_nipy_spectral.ipynb  task2_predictions.csv  task2_red.ipynb  task2_rgb.ipynb  task2_spectral.ipynb  task3.ipynb  task3_3colors.ipynb  task3_new_version.ipynb  task3_predictions.csv  task3_rgb_predictions.csv  task3_spectral_only.ipynb  task3_spectral_predictions.csv  train_rice_model.ipynb  training1.ipynb  training2.ipynb  training3.ipynb  training4.ipynb  training5.ipynb  (+19 more)
Archieve/: spectral_separate.py  training6_convnext_rgb.ipynb  training6_customCNN_spectral.ipynb  training6_densenet_rgb.ipynb  training6_effB0_rgb.ipynb  training7_customCNN_rgb_Attention_SMOT.ipynb  training7_customCNN_rgb_RF.ipynb  training8_alex_incept_rgb_att_SMOT_aug_bay.ipynb  training8_alex_incept_rgb_att_SMOT_aug_bay_final.ipynb  training8_customCNN_rgb_att_SMOT_aug_bay new.ipynb  training8_customCNN_rgb_att_SMOT_aug_bay.ipynb
Dataset/: separate.py
Task1_Training/: description.txt
app/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
processed_data/: OLD_cleaned_metadata.csv  OLD_cleaned_metadata_short.csv  cleaned_data.pkl  cleaned_metadata.csv  cleaned_metadata_short.csv  (+2 more)
(+32 files in other folders)
