[project]
name = "ml-group-assignment"
version = "0.1.0"
description = "Rice Plant Disease Classification"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "cleanvision>=0.3.6",
    "flask>=3.1.1",
    "imbalanced-learn>=0.13.0",
    "keras==2.15.0",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow==2.15.0",
]

